Issue #3340: moved javadoc parser violations to their own class

--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_fr.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_fr.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=Vérification terminée.
 DefaultLogger.auditStarted=Début de la vérification...
 general.exception=Exception levée : {0}
 general.fileNotFound=Fichier non trouvé !
+javadoc.missed.html.close=Le commentaire Javadoc à la colonne {0} ne peut être analysé. La balise HTML fermante ''{1}'' n''a pas été trouvée. Parfois, cela signifie qu''une des balises fermantes précédentes est manquante.
+javadoc.parse.rule.error=Le commentaire Javadoc à la colonne {0} ne peut être analysé. Détails : {1} lors de l''analyse {2}
+javadoc.unclosedHtml=Balise HTML trouvée dans la Javadoc : {0}
+javadoc.wrong.singleton.html.tag=Le commentaire Javadoc à la colonne {0} ne peut être analysé. Il est interdit de fermer les balises HTML singleton. Balise : {1}
 Main.createListener=Format de sortie invalide. Trouvé ''{0}'' mais attendu ''{1}'' ou ''{2}''.
 #
 # for Main.java
