--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_tr.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_tr.properties
@@ -4,6 +4,10 @@ DefaultLogger.auditFinished=Denetleme tamamlandı.
 DefaultLogger.auditStarted=Denetleme başlıyor...
 general.exception=Bir istisna yakalandı - {0}
 general.fileNotFound=Dosya bulunamadı!
+javadoc.missed.html.close=Sütununda Javadoc comment {0} hatası ayrıştırmak vardır. Cevapsız HTML yakın etiketi ''{1}'' Bazen yakın etiketi önceki etiketler biri için kaçırmış demektir.
+javadoc.parse.rule.error=Sütununda Javadoc comment {0} hatası ayrıştırmak vardır. Detaylar: {1} ayrıştırılırken {2}
+javadoc.unclosedHtml=Kapatılmamış bir HTML etiketi bulundu: {0}
+javadoc.wrong.singleton.html.tag=Sütununda Javadoc comment {0} hatası ayrıştırmak vardır. Bu singleton HTML etiketleri kapatmak için yasaktır. Etiket: {1}
 Main.createListener=Geçersiz çıktı biçimi. ''{0}'' ancak beklenen ''{1}'' veya ''{2}'' bulundu.
 #
 # for Main.java
