--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_zh.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_zh.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=检查完成。
 DefaultLogger.auditStarted=开始检查……
 general.exception=异常 - {0}
 general.fileNotFound=找不到文件！
+javadoc.missed.html.close=Javadoc 第 {0} 个字符解析错误。缺少 HTML 闭合标签： ''{1}''。 有时这代表前一标签未闭合。
+javadoc.parse.rule.error=Javadoc 第 {0} 个字符解析错误。解析 {2} ，详情： {1}
+javadoc.unclosedHtml=未关闭的 HTML 标签： {0} 。
+javadoc.wrong.singleton.html.tag=Javadoc 第 {0} 个字符解析错误。HTML 标签： {1} 不需要闭合。
 Main.createListener=非法的输出格式。预期为 ''{1}'' 或 ''{2}''，但实际为 ''{0}''。
 #
 # for Main.java
