--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=Audit done.
 DefaultLogger.auditStarted=Starting audit...
 general.exception=Got an exception - {0}
 general.fileNotFound=File not found!
+javadoc.missed.html.close=Javadoc comment at column {0} has parse error. Missed HTML close tag ''{1}''. Sometimes it means that close tag missed for one of previous tags.
+javadoc.parse.rule.error=Javadoc comment at column {0} has parse error. Details: {1} while parsing {2}
+javadoc.unclosedHtml=Unclosed HTML tag found: {0}
+javadoc.wrong.singleton.html.tag=Javadoc comment at column {0} has parse error. It is forbidden to close singleton HTML tags. Tag: {1}.
 Main.createListener=Invalid output format. Found ''{0}'' but expected ''{1}'' or ''{2}''.
 #
 # for Main.java
