--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_de.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_de.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=Prüfung beendet.
 DefaultLogger.auditStarted=Beginne Prüfung...
 general.exception=Ein Fehler ist aufgetreten - {0}
 general.fileNotFound=Datei nicht gefunden!
+javadoc.missed.html.close=Der Javadoc-Kommentar an Position {0} führt zu einem Parserfehler. Fehlendes schließendes HTML-Tag ''{1}''. Manchmal bedeutet dies, dass das schließende Tag eines vorgehenden Tags fehlt.
+javadoc.parse.rule.error=Der Javadoc-Kommentar an Position {0} führt zu einem Parserfehler. Details: {1} beim Parsen von {2}
+javadoc.unclosedHtml=Nicht geschlossenes HTML-Tag gefunden: {0}
+javadoc.wrong.singleton.html.tag=Der Javadoc-Kommentar an Position {0} führt zu einem Parserfehler. Singleton-HTML-Tags dürfen nicht geschlossen werden. Tag: {1}
 Main.createListener=Ungültiges Ausgabeformat. Gefunden ''{0}'', aber ''{1}'' oder ''{2}'' erwartet.
 #
 # for Main.java
