--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_es.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_es.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=Auditoría concluida.
 DefaultLogger.auditStarted=Comenzando auditoría...
 general.exception=Ocurrió una excepción - {0}
 general.fileNotFound=¡Fichero no encontrado!
+javadoc.missed.html.close=Javadoc comentario en la columna {0} tiene parse error. Perdidas HTML cerca etiqueta ''{1}''. A veces esto significa que cerca de la etiqueta se perdió por una de las etiquetas anteriores.
+javadoc.parse.rule.error=Javadoc comentario en la columna {0} tiene parse error. Detalles: {1} al analizar {2}
+javadoc.unclosedHtml=Se encontró una etiqueta HTML sin cerrar: {0}
+javadoc.wrong.singleton.html.tag=Javadoc comentario en la columna {0} tiene parse error. Está prohibido cerrar etiquetas HTML únicos. Tag: {1}
 Main.createListener=Formato de salida no válido. Encontrado ''{0}'' pero esperado ''{1}'' o ''{2}''.
 #
 # for Main.java
