--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_fi.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_fi.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=Tarkistus valmis.
 DefaultLogger.auditStarted=Aloitetaan tarkistus...
 general.exception=Poikkeus - {0}
 general.fileNotFound=Tiedostoa ei löydy!
+javadoc.missed.html.close=Javadoc kommentti sarakkeessa {0} on Jäsennysvirhe. Missed HTML lähellä tag ''{1}''. Joskus se tarkoittaa, että lähellä tag jäi yhden edellisen tunnisteita.
+javadoc.parse.rule.error=Javadoc kommentti sarakkeessa {0} on Jäsennysvirhe. Tiedot: {1} jäsennettäessä {2}
+javadoc.unclosedHtml=Unclosed HTML-koodi löytyy: {0}
+javadoc.wrong.singleton.html.tag=Javadoc kommentti sarakkeessa {0} on Jäsennysvirhe. On kiellettyä sulkea yksittäiseksi HTML tageja. Tag: {1} .
 Main.createListener=Virheellinen tulostusmuoto. Löytyi ''{0}'' mutta odotti ''{1}'' tai ''{2}''.
 #
 # for Main.java
