--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_ja.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_ja.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=監査が完了しました。
 DefaultLogger.auditStarted=監査を開始しています...
 general.exception=例外が発生しました - {0}
 general.fileNotFound=ファイルが見つかりません！
+javadoc.missed.html.close={0} 桁目の Javadoc コメントでパースエラーが発生しました。HTML タグ ''{1}'' が閉じていません。どこかもっと前のタグが閉じていない可能性もあります。
+javadoc.parse.rule.error={0} 桁目の Javadoc コメントでパースエラーが発生しました。詳細: {1}、{2} の解析中に発生。
+javadoc.unclosedHtml=閉じていない HTML タグが見つかりました: {0}
+javadoc.wrong.singleton.html.tag={0} 桁目の Javadoc コメントでパースエラーが発生しました。空要素の閉じタグは禁止されています。タグ: {1}。
 Main.createListener=無効な出力形式です。''{0}'' 名が見つかりましたが、''{1}'' 名か ''{2}'' 名です。
 #
 # for Main.java
