--- a/src/main/resources/com/puppycrawl/tools/checkstyle/messages_pt.properties
+++ b/src/main/resources/com/puppycrawl/tools/checkstyle/messages_pt.properties
@@ -3,6 +3,10 @@ DefaultLogger.auditFinished=Auditoria completa.
 DefaultLogger.auditStarted=Iniciando a auditoria...
 general.exception=Foi capturada uma excepção - {0}
 general.fileNotFound=Arquivo não encontrado!
+javadoc.missed.html.close=O comentário de Javadoc na coluna {0} tem erro sintático. Faltou uma etiqueta de fechamento HTML ''{1}''. Às vezes, isso significa que uma etiqueta de fechamento foi esquecida em uma das etiquetas HTML anteriores.
+javadoc.parse.rule.error=O comentário Javadoc na coluna {0} tem um erro sintático. Detalhes: {1} ao analisar {2}
+javadoc.unclosedHtml=Encontrada uma etiqueta HTML não fechada: {0}
+javadoc.wrong.singleton.html.tag=O comentário Javadoc na coluna {0} tem um erro sintático. É proibido fechar etiquetas HTML auto-fechantes. Tag: {1}.
 Main.createListener=O formato de saída é inválido. Foi encontrado ''{0}'', mas esperava ''{1}'' ou ''{2}''.
 #
 # for Main.java
